# InsightFace-Detection

./: CMakeLists.txt  Google Gemini.html  facesystem.cpp  facesystem.h  main.cpp  mainwindow.cpp  mainwindow.h
Google Gemini_files/: RotateCookiesPage.html  destination  destination(1)  gtm.js.Без названия  js  logo-scs-key2199747  saved_resource.html
